force-app/main/default/objects/Running__c/Running__c.object-meta.xml
<CustomObject>
    <label>Running</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Runnings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>