force-app/main/default/objects/Running__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UserId</label>
    <length>15</length>
    <type>Text</type>
</CustomField>